@@ -1,4 +1,9 @@
-﻿svs 26.01.2015 15:43:08 +0300 - build 4256
+﻿w17 30.01.2015 19:39:58 +0300 - build 4257
+
+1. M#0002708: Regexp "^(.*?\-\-)" != "^(.*?\-{2})"
+   Вернул #define MINSTEP(cmp) - /a*?ca/ "abca" работает
+
+svs 26.01.2015 15:43:08 +0300 - build 4256
 
 1. Падение дебажного FAR при вызове "__FARKEY_ToName(-1)".
    В KeyToTextImpl() "KeyText[0]=(wchar_t)(Key&0xFFFF);" приводило к невалидному символу...
